# retrom

./: CHANGELOG.md  Cargo.toml  FORK_NOTICE.md  README.md  io.github.wowjoeyd.RetromDevel.desktop  io.github.wowjoeyd.RetromDevel.metainfo.xml  io.github.wowjoeyd.RetromDevel.yml  nx.json  pnpm-lock.yaml  tsconfig.json
.github/PULL_REQUEST_TEMPLATE/: emulator-catalog-entry.md
design/: emulation-cloud-setup.md  emulation-cloud-validation.md  emulation-cloud.md
design/remote-play/: 00-investigation.md  02-sunshine.md  03-host-agent.md  04-moonlight.md  05-flatpak.md
docker/: docker-compose.yml  service.Dockerfile
nix/nixos/: service.nix
plugins/retrom-plugin-config/src/: config_manager.rs
plugins/retrom-plugin-emulator-sync/: Cargo.toml  build.rs  eslint.config.js  package.json  project.json  tsconfig.json  tsconfig.lib.json  vite.config.ts
plugins/retrom-plugin-emulator-sync/guest-js/: index.ts
plugins/retrom-plugin-emulator-sync/permissions/: default.toml
plugins/retrom-plugin-emulator-sync/permissions/autogenerated/: reference.md
plugins/retrom-plugin-emulator-sync/permissions/autogenerated/commands/: abort_emulator_sync.toml  analyze_emulator_user_data.toml  ensure_emulator_synced.toml  get_emulator_sync_index.toml  get_emulator_sync_status.toml  open_emulator_cache_dir.toml  pull_emulator_user_data.toml  push_emulator_preserve_data.toml  subscribe_to_emulator_sync_updates.toml  unsubscribe_from_emulator_sync_updates.toml
plugins/retrom-plugin-emulator-sync/permissions/schemas/: schema.json
plugins/retrom-plugin-emulator-sync/src/: commands.rs  desktop.rs  error.rs  lib.rs  sync_state.rs
plugins/retrom-plugin-installer/: Cargo.toml  tsconfig.lib.json
plugins/retrom-plugin-installer/src/: desktop.rs  error.rs
plugins/retrom-plugin-launcher/: Cargo.toml  build.rs
plugins/retrom-plugin-launcher/guest-js/: index.ts
plugins/retrom-plugin-launcher/permissions/autogenerated/: reference.md
plugins/retrom-plugin-launcher/permissions/autogenerated/commands/: set_quit_rebind_active.toml
plugins/retrom-plugin-launcher/permissions/schemas/: schema.json
plugins/retrom-plugin-launcher/src/: commands.rs  desktop.rs  error.rs  foreground.rs  gamepad.rs  lib.rs  quit.rs  remote_play.rs  window.rs
plugins/retrom-plugin-launcher/src/launch/: mod.rs  native.rs  steam.rs  wasm.rs
plugins/retrom-plugin-remote-play/: Cargo.toml  README.md  build.rs  project.json
plugins/retrom-plugin-remote-play/permissions/: default.toml
plugins/retrom-plugin-remote-play/permissions/autogenerated/: reference.md
plugins/retrom-plugin-remote-play/permissions/autogenerated/commands/: remote_play_ensure_host_app.toml  remote_play_host_readiness.toml  start_remote_play.toml
plugins/retrom-plugin-remote-play/permissions/schemas/: schema.json
plugins/retrom-plugin-remote-play/src/: commands.rs  desktop.rs  error.rs  lib.rs  moonlight.rs  sunshine.rs
plugins/retrom-plugin-service-client/src/: desktop.rs  lib.rs
plugins/retrom-plugin-steam/src/: desktop.rs
plugins/retrom-plugin-webdav-client/: tsconfig.lib.json
scripts/: bundle-host-agent.mjs
