[package]
name = "retrom-plugin-launcher"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Retrom plugin to facilitate the launching of games."
rust-version = "1.80"
exclude = ["./examples", "./webview-dist", "./webview-src", "**/node_modules"]
links = "tauri-plugin-launcher"

[features]
default = []
flatpak = []

[dependencies]
async-trait = { workspace = true }
prost = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
retrom-codegen = { workspace = true }
retrom-plugin-installer = { workspace = true }
retrom-plugin-steam = { workspace = true }
retrom-plugin-save-manager = { workspace = true }
retrom-plugin-service-client = { workspace = true }
retrom-plugin-config = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Used to legitimately take the OS foreground (entering fullscreen, and
# returning to the library when a game exits), since Windows blocks
# SetForegroundWindow from a background process. See src/foreground.rs.
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
# Used to detect when a Steam game starts/stops by polling the keys Steam keeps
# under HKCU\Software\Valve\Steam. See src/launch/steam.rs.
winreg = "0.55"

[build-dependencies]
tauri-plugin = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tauri-plugin", "windows-sys"]
