[package]
name = "retrom-plugin-remote-play"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Remote Play (Sunshine/Moonlight) plugin for the Retrom client application"
rust-version = "1.80"
exclude = ["/examples", "/dist", "/guest-js", "/node_modules"]
links = "tauri-plugin-remote-play"

[features]
# When built inside a Flatpak, route host commands (the Moonlight launch and the
# `flatpak info` availability check) through `flatpak-spawn --host`, mirroring the
# launcher. Enabled by the client's `flatpak` feature.
flatpak = []

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
retrom-codegen = { workspace = true }
retrom-plugin-launcher = { workspace = true }
retrom-plugin-service-client = { workspace = true }
retrom-plugin-config = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tauri-plugin"]
